--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <style>
       body { margin: 0; padding: 0; background-color: #020403; overflow: hidden; }
       #root { width: 100vw; height: 100vh; }
-      /* Hide the video element used for processing but keep it in DOM */
-      .input_video { display: none; }
     </style>
   <script type="importmap">
 {
@@ -38,5 +36,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- This script tag is required for Vite and other bundlers to find the entry point -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
